syntax = "proto3";
package ibc.core.wasm.v1;

option go_package = "github.com/cosmos/ibc-go/modules/core/28-wasm/types";

// WASM code entry that allows keeper to traverse
// the doubly linked list
message WasmCodeEntry {
  bytes  code_id            = 1;
  string previous_code_hash = 2;
  string next_code_hash     = 3;
}
